--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
         <div style = "float: left;">
-                <img src="me.jpg" alt="Picture of me in front of the sea" style="width:400px;height500px;"/>
+                <img src="me.JPG" alt="Picture of me in front of the sea" style="width:400px;height500px;"/>
         </div>
 
 
