--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     </head>
             <style>
             body { background-image: url("violet.jpg");
-                background-size: 1280px 750px }
+                background-size: 1280px 800px }
             </style>
 
-
-    <body style="font-family:cursive;font-size: 20px;"text="white">
+    <body style="font-family:cursive;    font-size: 20px;"    text="white">
         <center>
         <h1 style="font-family:georgia;" text="white"> Personal Biography </h1>
         </center>
@@ -18,8 +17,6 @@
         <div style = "float: left;">
                 <img src="me.JPG" alt="Picture of me in front of the sea" style="width:500px; height625px;"/>
         </div>
-
-
 
         <p>
             <strong>Name:</strong>
@@ -34,7 +31,7 @@
              <font color = "29105D"> St. Louis, Missouri </font> </p>
         <p>
             <strong>Contact Info:</strong>
-             <font color = "29105D"> khye@wustl.edu (636) 219 - 6523</font> </p>
+             <font color = "29105D"> khye@wustl.edu (636) 219 - 6523</font>   </p>
 
         <br />
         <br />
@@ -56,11 +53,13 @@
         </p>
 
         <blockquote>
-            <p><font color = "29105D">"All that we see or seem is but a dream within a dream" - Edgar Allan Poe</font></p>
+            <p><font color = "29105D">"All that we see or seem is but a dream within a dream" - Edgar Allan Poe</font>
+                  <img src = "dog gif.gif" alt = "GIF of a cute dog" style = "width50px; height:100px;"/>
+            </p>
         </blockquote>
 
-
         <a href="https://www.linkedin.com/in/karen-ye-201982143/ " class = "btn btn-default"> <button> Click Here </button> </a>
+
 
     </body>
 </html>
