--- a/index.html
+++ b/index.html
@@ -1,65 +1,90 @@
 <!doctype html>
 <html>
     <head>
-        <title> My Profile </title>
+      <title> My Profile </title>
     </head>
-            <style>
+
+      <style>
             body { background-image: url("violet.jpg");
-                background-size: 1280px 800px }
-            </style>
+                background-size: 1280px 1600px }
 
-    <body style="font-family:cursive;    font-size: 20px;"    text="white">
-        <center>
-        <h1 style="font-family:georgia;" text="white"> Personal Biography </h1>
-        </center>
+            .picRight{
+              float:right;
+              margin-right: 20px;
+            }
+            .picLeft{
+              float:left;
+              margin-left: 50px;
+            }
+      </style>
 
+      <body style="font-family:cursive;    font-size: 20px;"    text="white">
+          <center>
+            <h1 style="font-family:georgia;" text="white"> Personal Biography </h1>
+          </center>
 
-        <div style = "float: left;">
-                <img src="me.JPG" alt="Picture of me in front of the sea" style="width:500px; height625px;"/>
-        </div>
+          <div style = "float: left;">
+                <img src="me.JPG" alt="Picture of me in front of the sea" class="picRight" style="width:500px; height625px;"/>
+            </div>
 
         <p>
             <strong>Name:</strong>
-            <font color = "29105D"> Karen Ye</font> </p>
+            <abbr title = "Miss"> Ms. </abbr> Karen Ye </p>
         <p> <strong>Birthday:</strong>
-            <font color = "29105D"> June 3, 1999</font> </p>
+            June 3, 1999</p>
         <p>
             <strong>Age:</strong>
-             <font color = "29105D"> 18 </font> </p>
+             18 </p>
         <p>
             <strong>Hometown:</strong>
-             <font color = "29105D"> St. Louis, Missouri </font> </p>
+            St. Louis, Missouri  </p>
         <p>
             <strong>Contact Info:</strong>
-             <font color = "29105D"> khye@wustl.edu (636) 219 - 6523</font>   </p>
-
-        <br />
-        <br />
-
-
+              khye@wustl.edu  (636) 219 - 6523   </p>
         <p>
             <strong> Major:</strong>
-            <font color = "29105D">Computer Science</font>
-        </p>
+            Computer Science  </p>
         <p>
             <strong> Minor:</strong>
-            <font color = "29105D">Finance</font>
+            Finance  </p>
+        <p>     <font color = "29105D">
+            <strong>Mailing Address:</strong>
+                      <address> Campus Box 4703
+                      <p> 6515 Wydown Blvd. </p>
+                      <p>St. Louis, MO 63105 </p></address>     </font>
         </p>
 
+        <hr />
 
-        <p>
-            <strong>About me:</strong>
-            <font color = "29105D">I am a current undergraduate first year student at Washington University in St. Louis. I love to travel, experience new cultures, and capture all those special moments with my camera. I love doing community service and helping those in need. I'm also an ardent dog lover, but cats are great too.</font>
-        </p>
+          <h1>      <font color = "29105D">About me:</font>        </h1>
+                <font color = "29105D">I am a current undergraduate first year student at <em> Washington University in St. Louis</em>.
+                      I love to travel, experience new cultures, and capture all those special moments with my camera. I also love to dance.
+                      I have been dancing since I was 5. I'm a part of the Lunar New Year Festival organization here on campus, and we're
+                      having our annual showcase on February 2nd and 3rd. Tickets are on sale for $10! Come out and support us and you
+                      can watch me dance! I also love music, whether it's playing classical on instruments or jamming out to hip-hop.
+                      Doing community service and helping those in need is also something I feel really proud doing. Fun fact: I broke my
+                      arm in 3rd grade from falling off the couch. You never think some things are possible until they happen. I'm also an ardent
+                      dog lover, but cats are great too! A fun goal of mine for the future is to be able to make generous donations to all those people
+                      on the internet who have taken the time to make educational videos to help students like myself get through school, and
+                      all at the cost of nothing. These people are my heros. It would also be really cool if one day I could develop some awesome
+                      app or software that everyone will love.</font>
+          <h2 >     <font color = "29105D">   Classes This Semester:       </font>    </h2>
+                        <font color = "29105D">
+              <ul>
+                    <li> CSE 104 Web Development</li>
+                    <li> CSE 240 Logic and Discrete Mathematics</li>
+                    <li> CSE 132 Computer Science II</li>
+                    <li> Chinese 107 for Heritage Speakers</li>
+                    <li> Math 233 Calculus III</li>
+              </ul>
+              </font>
 
         <blockquote>
-            <p><font color = "29105D">"All that we see or seem is but a dream within a dream" - Edgar Allan Poe</font>
-                  <img src = "dog gif.gif" alt = "GIF of a cute dog" style = "width50px; height:100px;"/>
-            </p>
+            <p><font color = "29105D">"All that we see or seem is but a dream within a dream" - Edgar Allan Poe</font> </p>
+            <img src = "dog gif.gif" alt = "GIF of a cute dog"  class = "picLeft; "    style = "width50px; height:100px;"/>
         </blockquote>
 
         <a href="https://www.linkedin.com/in/karen-ye-201982143/ " class = "btn btn-default"> <button> Click Here </button> </a>
-
 
     </body>
 </html>
